# kfood-recommend

./: .gitignore  01. dataset.ipynb  02. 1. 한식진흥원 데이터 음식 추천-재료기준.ipynb  02. 2. 한식진흥원 데이터 음식 추천-재료전체.ipynb  02. 3. 한식진흥원 레시피 재료정보.ipynb  02. 4. 농촌진흥청 한식요리정보 재료기준.ipynb  02. 5. 농촌진흥청 재료기준(데이터 정규화등 처리).ipynb  101. dataset-식품영양성분정보.ipynb  102. 농촌진흥청 한식요리정보.ipynb  103. 농촌진흥청 한식요리정보 재표 피벗.ipynb  81. 통합코드맵 데이터 확인.ipynb  91. 한식진흥원 데이터 크롤.ipynb  92. 한식진흥원 데이터  구조화.ipynb  93. 한식 진흥원 JSON 데이터 to CSV.ipynb  94. 음식데이터 통합 코드맵.ipynb  README.md  main.py  pyproject.toml
db/json/: 56756_흰밥.json  56767_오곡밥.json  56791_잡곡밥.json  56792_보리밥.json  56794_곤드레나물밥.json  56795_김밥.json  56796_오징어덮밥.json  56797_낙지덮밥.json  56798_김치볶음밥.json  56799_누룽지.json  56800_주먹밥.json  56801_비빔밥.json  56802_산채비빔밥.json  56803_새싹비빔밥.json  56804_돌솥비빔밥.json  56805_영양돌솥밥.json  56806_불고기덮밥.json  56807_돼지국밥.json  (+184 more)
json/: 56756_흰밥.json  56767_오곡밥.json  56791_잡곡밥.json  56792_보리밥.json  56795_김밥.json  56797_낙지덮밥.json  56799_누룽지.json  56800_주먹밥.json  56805_영양돌솥밥.json  56806_불고기덮밥.json  56808_소고기국밥.json  56815_콩나물밥.json  56818_제육덮밥.json  56821_육회비빔밥.json  56822_회덮밥.json  56825_잣죽.json  56831_잔치국수.json  56832_비빔국수.json  56833_물냉면.json  56834_비빔냉면.json  56835_회냉면.json  56839_막국수.json  56840_쟁반국수.json  56841_콩국수.json  56845_콩나물국.json  56851_떡만둣국.json  56852_갈비탕.json  56853_우거지갈비탕.json  56860_민어매운탕.json  56861_대구맑은탕.json  56864_복매운탕.json  56867_알탕.json  56868_홍합탕.json  56869_추어탕.json  56872_부대찌개.json  56873_동태찌개.json  56875_청국장찌개.json  56876_신선로.json  56877_곱창전골.json  56878_국수전골.json  (+47 more)
lib/: recommend.py  similarity_model.py
